# scirs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  KNOWN_LIMITATIONS.md  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  RELEASE_STRATEGY.md  SCIRS2_POLICY.md  TODO.md  build.rs  deny.toml  scirs2_0.1.0_press_release.md
scirs2/: Cargo.toml  README.md  TODO.md
scirs2-autograd/: Cargo.toml  README.md  TODO.md
scirs2-autograd/docs/: NOTES.md
scirs2-autograd/examples/: array_test.rs  basic_operations.rs  basic_svd_test.rs  checkpoint_neural_network.rs  debug_norm_test.rs  enhanced_gradient_checkpointing.rs  enhanced_linalg_demo.rs  flexible_checkpointing.rs  forward_only_nn.rs  gradient_checkpointing.rs  linalg_aliases_demo.rs  linalg_performance.rs  linear_algebra_showcase.rs  matrix_inverse_test.rs  matrix_svd_test.rs  minimal_mm.rs  minimal_neural_network.rs  minimal_test.rs  qr_direct_test.rs  qr_simple_test.rs  shape_preservation_test.rs  shape_test.rs  simd_acceleration_test.rs  simple_neural_network.rs  simple_svd_test.rs  simplified_nn.rs  svd_gradient_test.rs  svd_larger_matrix_test.rs  svd_s_component_test.rs  svd_test.rs  test_conv2d_transpose.rs  test_decomp.rs  test_gradients.rs  test_jacobian.rs  test_jacobian_debug.rs  test_jacobian_fix.rs  test_jacobian_simple.rs  test_linalg_minimal.rs  test_matmul_grad.rs  test_norm_gradient_fix.rs
scirs2-autograd/src/: error.rs  evaluation.rs  function.rs  gradient.rs  gradient_clipping.rs  graph.rs  high_performance.rs  lib.rs  ndarray_ext.rs  op.rs  ops.rs  tape.rs  tensor.rs  test_helper.rs  tracing.rs  variable.rs
scirs2-autograd/tests/: advanced_feature_tests.rs  advanced_linalg_demo.rs  checkpoint_tests.rs  comprehensive_feature_tests.rs  comprehensive_integration_tests.rs  debug_gradient_flow.rs  debug_svd_reconstruction.rs  edge_case_stress_tests.rs  enhanced_linalg_test.rs  function_tests.rs  gradient_system_test.rs  gradient_tests.rs  graph_optimization_tests.rs  integration_linalg_test.rs  linalg_comprehensive_tests.rs  linalg_operations_test.rs  linalg_tests.rs  matrix_ops_tests.rs  minimal_test.rs  new_linalg_ops_test.rs  norm_ops_tests.rs  numerical_stability_tests.rs  stability_framework_integration_tests.rs  test_advanced_implementations.rs  test_helpers.rs  test_matrix_functions.rs
scirs2-cluster/: Cargo.toml  README.md  TODO.md  model.json
scirs2-cluster/benches/: clustering_benchmarks.rs
scirs2-cluster/examples/: advanced_test.rs  advanced_visualization_demo.rs  all_algorithms_test.rs  animated_kmeans_demo.rs  birch_demo.rs  cluster_advanced_features_demo.rs  cluster_advanced_visualization_demo.rs  custom_distance_metrics_demo.rs  dbscan_demo.rs  dendrogram_plotting_demo.rs  ensemble_clustering_demo.rs  evaluation_demo.rs  evaluation_metrics_demo.rs  gmm_demo.rs  hdbscan_demo.rs  hierarchical_demo.rs  kmeans2_demo.rs  kmeans2_scipy_compat.rs  kmeans_demo.rs  leader_demo.rs  meanshift_demo.rs  meanshift_demo_improved.rs  minibatch_kmeans_demo.rs  native_plotting_demo.rs  optics_demo.rs  parallel_hierarchical_demo.rs  parallel_kmeans_demo.rs  quantum_annealing_demo.rs  serialization_demo.rs  silhouette_example.rs  simd_optimization_demo.rs  test_advanced_enhanced.rs
scirs2-cluster/src/: advanced_benchmarking.rs  advanced_clustering.rs  advanced_visualization.rs  birch.rs  enhanced_clustering_features.rs  gmm.rs  gpu_distributed_clustering.rs  graph.rs  input_validation.rs  leader.rs  lib.rs  native_plotting.rs  neighbor_search.rs  plotting.rs  property_tests.rs  python_bindings.rs  python_bindings.rs.disabled  quantum_clustering.rs  sparse.rs  stability.rs  streaming.rs  tests.rs  text_clustering.rs  time_series.rs  vq.rs
scirs2-cluster/tests/: integration_test.rs
scirs2-core/: Cargo.toml  README.md  TODO.md  build.rs
scirs2-core/benches/: array_protocol_bench.rs  mpsgraph_operations.rs  numpy_scipy_comparison_bench.rs  pattern_recognition_bench.rs  random_performance_bench.rs  run_simd_comparison.sh  simd_ultra_comparison.py  simple_array_bench.rs  validation_bench.rs
scirs2-core/docs/: API_FREEZE_1.0.md  ARRAY_MACRO_FIX.md  PERFORMANCE_CHARACTERISTICS.md  PRODUCTION_DEPLOYMENT.md  SIMD_ULTRA_OPTIMIZATION.md  api_reference.md  examples.md  getting_started.md
scirs2-core/examples/: adaptive_optimization_demo.rs  advanced_ecosystem_demo.rs.disabled  advanced_error_handling.rs  advanced_indexing_example.rs  advanced_ndarray_example.rs  advanced_prefetching_example.rs  advanced_stability_showcase.rs  arbitrary_precision_example.rs  array_macro_usage.rs  array_protocol_advanced.rs  array_protocol_backpropagation.rs  array_protocol_distributed_training.rs  array_protocol_gpu.rs  array_protocol_operations.rs  batch_conversions_example.rs  core_large_dataset_processing.rs  core_memory_efficient_example.rs  coverage_analysis_demo.rs  custom_array_protocol.rs  distributed_training_example.rs  ecosystem_integration_demo.rs  (+55 more)
scirs2-datasets/: Cargo.toml  README.md  TODO.md
scirs2-fft/: Cargo.toml  README.md  TODO.md
scirs2-graph/: ALGORITHM_COMPLEXITY.md  API_STABILITY_ASSESSMENT.md  CHANGELOG.md  Cargo.toml  PERFORMANCE_BENCHMARKS.md  README.md  TODO.md
scirs2-integrate/: Cargo.toml  README.md  TODO.md  build.rs
scirs2-integration-tests/: Cargo.toml  TODO.md
scirs2-io/: Cargo.toml  README.md  TODO.md
scirs2-linalg/: Cargo.toml  README.md  TODO.md
scirs2-ndimage/: Cargo.toml  README.md  TODO.md
scirs2-neural/: Cargo.toml  Cargo.toml.minimal  README.md  TODO.md  build.rs
scirs2-numpy/: Cargo.toml  README.md  TODO.md
scirs2-optim/: Cargo.toml  README.md
scirs2-optimize/: Cargo.toml  README.md  TODO.md
scirs2-python/: .coverage  Cargo.toml  README.md  TODO.md  pyproject.toml  pytest.ini  scirs2.pyi
scirs2-series/: Cargo.toml  README.md  TODO.md
scirs2-sparse/: Cargo.toml  README.md  TODO.md
scirs2-spatial/: Cargo.toml  README.md  TODO.md
scirs2-stats/: Cargo.toml  README.md  TODO.md
scirs2-transform/: Cargo.toml  README.md  TODO.md
scirs2-validation/: Cargo.toml  README.md
scirs2-vision/: Cargo.toml  README.md  TODO.md
(+4330 files in other folders)
