[workspace]
members = [
    "scirs2",
    "scirs2-core",
    "scirs2-linalg",
    "scirs2-integrate",
    "scirs2-fft",
    "scirs2-signal",
    "scirs2-sparse",
    "scirs2-spatial",
    "scirs2-ndimage",
    "scirs2-io",
    "scirs2-datasets",
    # AI/ML modules - Core working modules only
    "scirs2-neural",
    "scirs2-graph",
    "scirs2-transform",
    "scirs2-metrics",
    "scirs2-text",
    "scirs2-vision",
    "scirs2-numpy",  # SciRS2 fork of rust-numpy with ndarray 0.17 support
    "scirs2-series",
    "scirs2-autograd",
    # Benchmarking suite
    "benches",

    # Integration tests
    "scirs2-integration-tests",

    # Other
    "scirs2-interpolate", # Needs debugging - enabling to fix
    "scirs2-optimize", # 518+ compilation errors
    "scirs2-stats", # Working on fixing compilation errors
    "scirs2-cluster", # Re-enabled after fixing workspace conflict
    # "scirs2-optim", # Moved to independent OptiRS project
    "scirs2-special", # Compilation errors - enabling to fix
    "scirs2-python", # Unified Python bindings for PyPI (v0.3.0+)
    "scirs2-wasm", # WebAssembly bindings for browser/Node.js (v0.2.0+)
    "scirs2-validation", # Shared statistical validation framework
]
resolver = "2"

[workspace.metadata.nox]
bench_crates = ["scirs2-ndimage"]

[workspace.lints.rust]
unused_variables = "allow"
unused_imports = "allow"
unused_mut = "allow"
mismatched_lifetime_syntaxes = "allow"
dead_code = "allow"
unpredictable_function_pointer_comparisons = "allow"
unknown_lints = "allow"

[workspace.lints.clippy]
# Prevent new unwrap() calls - use expect() or proper error handling
unwrap_used = "warn"
# Allow expect() with descriptive messages
expect_used = "allow"

# Mobile platform features
[workspace.metadata.mobile]
ios_min_version = "13.0"
android_min_api = 21
supported_architectures = ["aarch64", "armv7"]

[workspace.package]
version = "0.4.2"  # scirs2 0.4.2
edition = "2021"
authors = ["COOLJAPAN OU (Team KitaSan)"]
description = "A Rust port of SciPy with AI/ML extensions - Scientific Computing and AI Library"
license = "Apache-2.0"
repository = "https://github.com/cool-japan/scirs"
keywords = ["scientific", "mathematics", "scipy", "ai", "machine-learning"]
categories = ["science", "mathematics", "algorithms"]

[workspace.dependencies]
# Core array computing (no_std support via default-features = false)
# For embedded: use features = [] for pure no_std, or features = ["alloc"] for heap support
ndarray = { version = "0.17.2", default-features = false, features = ["std", "serde", "rayon", "approx"] }
ndarray-stats = "0.7.0"
ndarray-rand = "0.16.0"
# ndarray-npy removed to eliminate `zip` crate from dependency tree (COOLJAPAN Pure Rust Policy)
# Numerical libraries (no_std compatible)
num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }  # libm for no_std math
num-complex = { version = "0.4.6", default-features = false, features = ["libm"] }  # no_std support
num-integer = { version = "0.1.46", default-features = false }  # no_std support

# Parallelization and performance
rayon = "1.11.0"
wide = "1.2.0"  # SIMD acceleration library
num_cpus = "1.17.0"

# Platform-specific system APIs
windows-sys = { version = "0.61", default-features = false }  # Windows system APIs

# Random number generation
rand = "0.10.0"
rand_distr = "0.6.0"
rand_core = "0.10.0"
rand_pcg = "0.10.1"
rand_chacha = "0.10.0"
fastrand = "2.3.0"

# Development and testing
thiserror = "2.0.18"
approx = "0.5.1"
criterion = "0.8.2"
once_cell = "1.21.4"
tempfile = "3.27.0"
tokio-test = "0.4.5"
cc = "1.2.57"  # Build-time C/C++/Objective-C compiler

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# OxiCode - Modern successor to bin-code with SIMD optimization
oxicode = { version = "0.2", features = ["serde", "simd"] }
chrono = "0.4.44"

# Python bindings (optional)
# NOTE: default-features = false to avoid auto-initialize which breaks manylinux builds
# extension-module should be enabled only in actual Python extension module crates
pyo3 = { version = "0.28.3", default-features = false, features = ["macros"] }
numpy = { version = "0.28.0" }  # Keep for non-SciRS2 compatibility
scirs2-numpy = { version = "0.4.2", path = "./scirs2-numpy" }  # SciRS2 fork with ndarray 0.17

# Linear algebra and math (heavy dependencies - minimize features)
nalgebra = { version = "0.34.1", default-features = false }
rustfft = { version = "6.4.1", default-features = false }
argmin = { version = "0.11.0", default-features = false }
sprs = { version = "0.11.4", default-features = false }

# OxiFFT - Pure Rust high-performance FFT (FFTW-compatible algorithms)
oxifft = { version = "0.2.0" }

# OxiBLAS - Pure Rust BLAS/LAPACK implementation (replaces OpenBLAS)
# Using crates.io 0.2 series for stable releases
oxiblas = { version = "0.2.1", features = ["parallel"] }
oxiblas-ndarray = { version = "0.2.1" }
oxiblas-blas = { version = "0.2.1" }
oxiblas-lapack = { version = "0.2.1" }
oxiblas-core = { version = "0.2.1" }
oxiblas-matrix = { version = "0.2.1" }

# DEPRECATED: OpenBLAS dependencies - replaced by OxiBLAS
# ndarray-linalg = { version = "0.18.0", default-features = false }
# blas-src = { version = "0.14", default-features = false }
# cblas-sys = { version = "0.3.0", default-features = false }
# blas = { version = "0.23.0", default-features = false }
# NOTE: All OpenBLAS/system BLAS dependencies removed - using pure Rust OxiBLAS

# Serialization and data handling
either = "1.15.0"
csv = "1.4.0"
image = "0.25.10"
image-025 = { package = "image", version = "0.25.10", features = ["jpeg", "png", "gif"] }

# IO and file handling
blake3 = "1.8.3"
regex = "1.12.3"
libc = "0.2.183"
cached = "0.59.0"
byteorder = "1.5"
rmp-serde = "1.3"
sha2 = "0.11"
crc32fast = "1.5"
hex = "0.4"
digest = "0.11"
data-encoding = "2.10"
glob = "0.3"
oxiarc-archive = "0.2.6"  # Pure Rust archive support (COOLJAPAN Policy)
oxiarc-lz4 = "0.2.6"  # Pure Rust LZ4 compression (COOLJAPAN Policy)
oxiarc-bzip2 = "0.2.6"  # Pure Rust BZIP2 compression (COOLJAPAN Policy)
oxiarc-zstd = "0.2.6"  # Pure Rust Zstandard compression (COOLJAPAN Policy)
oxiarc-core = "0.2.6"  # Pure Rust compression core (COOLJAPAN Policy)
oxiarc-deflate = "0.2.6"  # Pure Rust DEFLATE/GZIP compression (COOLJAPAN Policy)
urlencoding = "2.1"
url = "2.5.8"
cron = "0.16"

# ML specific
tokenizers = "0.22.2"
autograd = "1.1.1"
smallvec = "1.15.1"
uuid = { version = "1.22.0", features = ["v4"] }
rustc-hash = "2.1.1"
matrixmultiply = "0.3.10"
num = "0.4.3"
special = "0.13.0"
special-11 = { package = "special", version = "0.13.0" }
unicode-normalization = "0.1"
unicode-segmentation = "1.13"
lazy_static = "1.5"
statrs = "0.18.0"
petgraph = "0.8.3"

# Additional dependencies for modules
half = { version = "2.7.1", features = ["num-traits", "serde", "alloc"] }
crossbeam = { version = "0.8.4" }
crossbeam-utils = { version = "0.8.21" }
crossbeam-deque = { version = "0.8.6" }
crossbeam-channel = { version = "0.5.15" }
memmap2 = { version = "0.9.10" }
bytemuck = { version = "1.25", features = ["derive"] }
oxiarc-snappy = "0.2.6"  # Pure Rust Snappy compression (COOLJAPAN Policy)
oxiarc-brotli = "0.2.6"  # Pure Rust Brotli compression (COOLJAPAN Policy)
plotly = { version = "0.14.1" }
plotters = { version = "0.3.7" }
reqwest = { version = "0.13", features = ["blocking", "json"] }

# Math libraries
libm = "0.2"
array-init = "2.1.0"

# Fixed-point arithmetic for no_std environments
fixed = { version = "1.31.0", default-features = false }
netcdf3 = "0.6.0"
sobol = "1.0.2"
halton = "0.2.1"
ordered-float = "5.1.0"
kamadak-exif = "0.6"
hdf5 = "0.8.1"
ureq = "3.3"
parking_lot = "0.12.5"
serde_yaml = "0.9"
toml = "1.1"
ciborium = "0.2.2"

# Arbitrary precision libraries
num-bigint = "0.4.6"
rug = { version = "1.29.0", features = ["integer", "float", "rational", "complex"], default-features = false }

# There were compatibility issues with chrono
arrow = "58.1.0"
arrow-array = "58.1.0"
arrow-buffer = "58.1.0"
arrow-cast = "58.1.0"
arrow-data = "58.1.0"
arrow-schema = "58.1.0"
arrow-select = "58.1.0"
arrow-arith = "58.1.0"
parquet = { version = "58.1.0", default-features = false, features = ["arrow", "brotli", "flate2-zlib-rs", "lz4", "simdutf8", "snap"] }

# Async dependencies
tokio = { version = "1.50.0", features = ["full"] }
futures = "0.3.32"
futures-util = "0.3.32"
async-trait = "0.1.89"

# Logging
log = "0.4"

# System information
sysinfo = "0.38.4"

# GPU backends
metal = "0.33.0"
objc2 = { version = "0.6.4"}
objc2-foundation = "0.3.2"
objc2-metal = "0.3.2"  # Metal bindings for objc2
objc2-metal-performance-shaders = "0.3.2"
objc2-metal-performance-shaders-graph = "0.3.2"  # MPSGraph for high-performance graph operations
opencl3 = { version = "0.12" }
wgpu = { version = "29.0" }
pollster = { version = "0.4" }
cudarc = { version = "0.19", features = ["cuda-12000"] }


# Development and testing additions
ctor = { version = "0.6" }
quickcheck = { version = "1.1" }
quickcheck_macros = { version = "1.2" }
proptest = { version = "1.11.0" }

# Data structures
indexmap = { version = "2.13" }
ahash = { version = "0.8" }

# Database drivers
rusqlite = { version = "=0.37.0" }
# sqlx removed - not used (postgres/mysql implementations are stubs)
# mongodb removed - stub only, not actually used
# redis removed - stub only, not actually used

# Real-time streaming
tokio-tungstenite = { version = "0.29" }
rumqttc = { package = "rumqttc-v4-next", version = "0.29", default-features = false, features = ["use-rustls-ring"] }
eventsource-client = { version = "0.17" }
tonic = { version = "0.14" }
# prost removed - not used in any crate

# CLI and utilities
clap = { version = "4.6" }

# Cryptography
rsa = { version = "0.9" }

# WASM support
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = { version = "0.4" }
wasm-bindgen-test = { version = "0.3" }
js-sys = { version = "0.3" }
web-sys = { version = "0.3", features = ["console"] }
serde-wasm-bindgen = { version = "0.6" }
console_error_panic_hook = { version = "0.1.7" }  # Optional marking should be in individual crate Cargo.toml
getrandom = { version = "0.4", features = ["wasm_js"] }  # WASM-compatible RNG (v0.4 uses wasm_js feature)
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }  # WASM-compatible RNG for transitive deps using getrandom 0.3

# Monitoring and Observability
prometheus = { version = "0.14" }

# Tracing and instrumentation
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "registry", "std"] }
tracing-appender = { version = "0.2" }
tracing-flame = { version = "0.2" }
tracing-chrome = { version = "0.7.2" }
tracing-opentelemetry = { version = "0.32" }

# OpenTelemetry
opentelemetry = { version = "0.31.0" }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio", "metrics", "trace"] }
opentelemetry-otlp = { version = "0.31.1", features = ["grpc-tonic", "metrics", "trace"] }

# Memory profiling (Pure Rust - uses OS APIs via libc)

# Platform-specific profiling (feature-gated)
# perf-event for Linux performance counters
perf-event = { version = "0.4.9" }

# Tracy profiler bindings (C dep, feature-gated, disabled by default)
tracy-client = { version = "0.18", default-features = false, features = ["timer-fallback"] }

# libnuma bindings for Linux NUMA operations (C dep, feature-gated, Linux only)
libnuma = { version = "0.0.4" }

# GUI libraries
egui = { version = "0.34" }
eframe = { version = "0.34" }

# Async Python support (successor to pyo3-asyncio)
pyo3-async-runtimes = { version = "0.28.0", default-features = false, features = ["tokio-runtime"] }

# Python integration (optional)

# Base scirs2 crates
scirs2-core = { version = "0.4.2", path = "./scirs2-core", default-features = false }
scirs2 = { version = "0.4.2", path = "./scirs2", default-features = false }
scirs2-linalg = { version = "0.4.2", path = "./scirs2-linalg", default-features = false }
scirs2-integrate = { version = "0.4.2", path = "./scirs2-integrate", default-features = false }
scirs2-interpolate = { version = "0.4.2", path = "./scirs2-interpolate", default-features = false }
scirs2-optimize = { version = "0.4.2", path = "./scirs2-optimize", default-features = false }
scirs2-fft = { version = "0.4.2", path = "./scirs2-fft", default-features = false }
scirs2-stats = { version = "0.4.2", path = "./scirs2-stats", default-features = false }
scirs2-special = { version = "0.4.2", path = "./scirs2-special", default-features = false }
scirs2-signal = { version = "0.4.2", path = "./scirs2-signal", default-features = false }
scirs2-sparse = { version = "0.4.2", path = "./scirs2-sparse" }
scirs2-spatial = { version = "0.4.2", path = "./scirs2-spatial" }

# Advanced modules
scirs2-cluster = { version = "0.4.2", path = "./scirs2-cluster" }
scirs2-ndimage = { version = "0.4.2", path = "./scirs2-ndimage" }
scirs2-io = { version = "0.4.2", path = "./scirs2-io" }
scirs2-datasets = { version = "0.4.2", path = "./scirs2-datasets", default-features = false }

# AI/ML modules
scirs2-neural = { version = "0.4.2", path = "./scirs2-neural" }
# scirs2-optim moved to independent OptiRS project
scirs2-graph = { version = "0.4.2", path = "./scirs2-graph" }
scirs2-transform = { version = "0.4.2", path = "./scirs2-transform" }
scirs2-metrics = { version = "0.4.2", path = "./scirs2-metrics", default-features = false }
scirs2-text = { version = "0.4.2", path = "./scirs2-text" }
scirs2-vision = { version = "0.4.2", path = "./scirs2-vision" }
scirs2-series = { version = "0.4.2", path = "./scirs2-series" }
scirs2-autograd = { version = "0.4.2", path = "./scirs2-autograd" }
scirs2-wasm = { version = "0.4.2", path = "./scirs2-wasm" }  # WebAssembly bindings
scirs2-python = { version = "0.4.2", path = "./scirs2-python" }  # Python bindings


[profile.release]
opt-level = 2  # Use level 2 instead of 3 for WASM compatibility
lto = false
codegen-units = 16  # More codegen units for faster compilation and WASM safety

[profile.dev]
opt-level = 0  # Reduced to prevent memory exhaustion
debug = 1  # Line numbers only (not full debug info=2) - reduces binary size significantly
split-debuginfo = "packed"  # Separate debug info into .dwp files (Linux/CUDA optimization)
incremental = true  # Keep incremental compilation but consider cleaning periodically

# Disable debug info for all dependencies to reduce target/ size dramatically
[profile.dev.package."*"]
debug = false
strip = "debuginfo"

[profile.test]
opt-level = 0  # Reduced to prevent memory exhaustion during compilation
debug = 1  # Line numbers only - reduces test binary size
split-debuginfo = "packed"

# Disable debug info for dependencies in test builds
[profile.test.package."*"]
debug = false
strip = "debuginfo"

[profile.bench]
opt-level = 3


# Patches to override unmaintained transitive dependencies
[patch.crates-io]
# Force parking_lot 0.12.5 to fix instant 0.1.13 warning from hdf5
# The hdf5 crate uses parking_lot 0.11.2 which depends on unmaintained instant
# parking_lot = { version = "0.12.5" }  # Disabled - causes compilation issues with hdf5

