[package]
name = "scirs2-autograd"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Automatic differentiation module for SciRS2 (scirs2-autograd)"
license.workspace = true
repository.workspace = true
keywords = ["autograd", "machine-learning", "scientific", "ai", "ml"]
categories = ["science", "mathematics", "algorithms"]

[lints]
workspace = true
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]


[dependencies]
# Core dependencies - ALL numeric/array/random functionality from scirs2-core (SciRS2 POLICY)
scirs2-core = { workspace = true, features = ["parallel", "array", "random"] }
approx = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = { workspace = true }
smallvec = { workspace = true }
uuid = { workspace = true }
rustc-hash = { workspace = true }
libc = { workspace = true }
matrixmultiply = { workspace = true }
num = { workspace = true }
special = { workspace = true }
array-init = { workspace = true }
# Remove dependency on scirs2-linalg to avoid circular dependency
# BLAS dependencies removed - using core abstractions
# ndarray-linalg = { workspace = true, default-features = false }
toml = { workspace = true }
# cblas-sys removed - all BLAS operations now go through scirs2-core

[features]
default = []
blas = ["scirs2-core/linalg"]  # BLAS/LAPACK via OxiBLAS (pure Rust)
# NOTE: OpenBLAS/Netlib features removed - using pure Rust OxiBLAS for all platforms
simd = ["scirs2-core/simd"]
parallel = [] # Parallel processing support

[[example]]
name = "basic_autograd"
path = "examples/basic_autograd.rs"

[[example]]
name = "simd_acceleration_test"
path = "examples/simd_acceleration_test.rs"
required-features = ["simd"]

[lib]
doctest = false